<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/light_black">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="10dp">

        <ImageView
            android:id="@+id/image1"
            android:layout_width="89dp"
            android:layout_height="63dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="270dp"
            android:layout_marginBottom="615dp"
            android:background="@drawable/betadine"
            android:contentDescription="@string/image_content_desc"
            android:paddingTop="78dp" />

    </androidx.cardview.widget.CardView>
    </LinearLayout>

    <TextView
        android:id="@+id/textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:padding="7dp"
        android:text="@string/Betadine_ointment"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:padding="7dp"
        android:text="@string/win_medicare"
        android:textColor="@color/medium_black" />

    <TextView
        android:id="@+id/textview2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="20dp"
        android:padding="4dp"
        android:text="@string/quantity"
        android:textColor="@color/medium_black" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="95dp"
        android:background="@color/medium_black" />

    <TextView
        android:id="@+id/textview3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="290dp"
        android:padding="2dp"
        android:text="@string/mrp"
        android:textColor="@color/medium_black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textview4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="275dp"
        android:padding="4dp"
        android:textSize="12sp"
        android:text="@string/mrp_rupee"
        android:textColor="@color/black" />

    <View
        android:id="@+id/view2"
        android:layout_width="1dp"
        android:layout_height="55dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="100dp"
        android:background="@color/teal_200" />

    <TextView
        android:id="@+id/textview5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="190dp"
        android:padding="2dp"
        android:textSize="12sp"
        android:text="@string/discounted_price"
        android:textColor="@color/medium_black" />

    <TextView
        android:id="@+id/textview6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="135dp"
        android:layout_marginEnd="210dp"
        android:padding="4dp"
        android:textSize="12sp"
        android:text="@string/discounted_price_rupee"
        android:textColor="@color/black" />

    <View
        android:id="@+id/view3"
        android:layout_width="1dp"
        android:layout_height="55dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="100dp"
        android:background="@color/teal_200" />

        <TextView
            android:id="@+id/textview7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="170dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="100dp"
            android:padding="2dp"
            android:textSize="12sp"
            android:text="@string/discount"
            android:textColor="@color/medium_black" />

        <TextView
            android:id="@+id/textview8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="170dp"
            android:layout_marginTop="125dp"
            android:layout_marginEnd="10dp"
            android:padding="4dp"
            android:textSize="12sp"
            android:text="@string/discount_price"
            android:textColor="@color/red" />

    <View
        android:id="@+id/view4"
        android:layout_width="1dp"
        android:layout_height="55dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="100dp"
        android:background="@color/teal_200" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/teal_700"
        android:backgroundTintMode="add"
        android:gravity="center"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/button_add_to_cart"
        android:textColor="@color/white"
        android:textSize="11sp">

    </Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginTop="190dp"
        android:orientation="vertical">

      <androidx.cardview.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="170dp"
          app:cardBackgroundColor="@color/white"
          card_view:cardCornerRadius="10dp">


        <ImageView
            android:id="@+id/image2"
            android:layout_width="89dp"
            android:layout_height="63dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/derobin"
            android:contentDescription="@string/image_content_desc" />

      </androidx.cardview.widget.CardView>
    </LinearLayout>

    <TextView
        android:id="@+id/textview9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="20dp"
        android:padding="7dp"
        android:text="@string/derobin_ointment"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textview10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="20dp"
        android:padding="7dp"
        android:text="@string/usv"
        android:textColor="@color/medium_black" />

    <TextView
        android:id="@+id/textview11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="240dp"
        android:padding="4dp"
        android:text="@string/quantity1"
        android:textColor="@color/medium_black" />

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="265dp"
        android:background="@color/medium_black" />

    <TextView
        android:id="@+id/textview12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="290dp"
        android:padding="2dp"
        android:text="@string/mrp"
        android:textColor="@color/medium_black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textview13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="275dp"
        android:padding="4dp"
        android:text="@string/mrp_rupee1"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <View
        android:id="@+id/view6"
        android:layout_width="1dp"
        android:layout_height="55dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="270dp"
        android:background="@color/teal_200" />

    <TextView
        android:id="@+id/textview14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="190dp"
        android:padding="2dp"
        android:textSize="12sp"
        android:text="@string/discounted_price"
        android:textColor="@color/medium_black" />

    <TextView
        android:id="@+id/textview15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="310dp"
        android:layout_marginEnd="210dp"
        android:padding="4dp"
        android:textSize="12sp"
        android:text="@string/discounted_price_rupee1"
        android:textColor="@color/black" />

    <View
        android:id="@+id/view7"
        android:layout_width="1dp"
        android:layout_height="55dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="270dp"
        android:background="@color/teal_200" />

    <TextView
        android:id="@+id/textview16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="100dp"
        android:padding="2dp"
        android:textSize="12sp"
        android:text="@string/discount"
        android:textColor="@color/medium_black" />

    <TextView
        android:id="@+id/textview17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="10dp"
        android:padding="4dp"
        android:text="@string/discount_price1"
        android:textColor="@color/red"
        android:textSize="12sp" />

    <View
        android:id="@+id/view8"
        android:layout_width="1dp"
        android:layout_height="55dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="270dp"
        android:background="@color/teal_200" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:layout_marginTop="275dp"
        android:textSize="11sp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/teal_700"
        android:backgroundTintMode="add"
        android:text="@string/button_add_to_cart" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginTop="370dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="170dp"
            app:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="10dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="89dp"
            android:layout_height="63dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/image_content_desc"
            android:src="@drawable/thrombophob" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <TextView
        android:id="@+id/textview18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="375dp"
        android:padding="7dp"
        android:text="@string/thrombophob_ointment"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textview19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="410dp"
        android:layout_marginEnd="20dp"
        android:padding="7dp"
        android:text="@string/zydus"
        android:textColor="@color/medium_black" />

    <TextView
        android:id="@+id/textview20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="440dp"
        android:padding="4dp"
        android:text="@string/quantity2"
        android:textColor="@color/medium_black" />

    <View
        android:id="@+id/view9"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="465dp"
        android:background="@color/medium_black" />

    <TextView
        android:id="@+id/textview21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="470dp"
        android:layout_marginEnd="290dp"
        android:padding="2dp"
        android:text="@string/mrp"
        android:textColor="@color/medium_black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textview22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="490dp"
        android:layout_marginEnd="275dp"
        android:padding="4dp"
        android:textSize="12sp"
        android:text="@string/mrp_rupee2"
        android:textColor="@color/black" />

    <View
        android:id="@+id/view10"
        android:layout_width="1dp"
        android:layout_height="55dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="470dp"
        android:background="@color/teal_200" />

    <TextView
        android:id="@+id/textview23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="470dp"
        android:layout_marginEnd="190dp"
        android:padding="2dp"
        android:textSize="12sp"
        android:text="@string/discounted_price"
        android:textColor="@color/medium_black" />

    <TextView
        android:id="@+id/textview24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="210dp"
        android:padding="4dp"
        android:textSize="12sp"
        android:text="@string/discounted_price_rupee2"
        android:textColor="@color/black" />

    <View
        android:id="@+id/view11"
        android:layout_width="1dp"
        android:layout_height="55dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="470dp"
        android:background="@color/teal_200" />

    <TextView
        android:id="@+id/textview25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="470dp"
        android:layout_marginEnd="100dp"
        android:padding="2dp"
        android:textSize="12sp"
        android:text="@string/discount"
        android:textColor="@color/medium_black" />

    <TextView
        android:id="@+id/textview26"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="490dp"
        android:layout_marginEnd="10dp"
        android:padding="4dp"
        android:textSize="12sp"
        android:text="@string/discount_price2"
        android:textColor="@color/red" />

    <View
        android:id="@+id/view12"
        android:layout_width="1dp"
        android:layout_height="55dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="470dp"
        android:background="@color/teal_200" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:layout_marginTop="480dp"
        android:textSize="11sp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/teal_700"
        android:backgroundTintMode="add"
        android:text="@string/button_add_to_cart" />

</RelativeLayout>
</androidx.cardview.widget.CardView>

